<resources>
    <string name="app_name">Finanzas_personales</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="verificar_email">Verificar email</string>
    <string name="registrarme">Registrarme</string>
    <string name="repetir_Password">Repetir Password</string>
    <string name="menu_principal">Menú principal</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="movimientos">Movimientos</string>
    <string name="reportes">Reportes</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="atras">Átras</string>
    <string name="configurar_perfil">Configurar perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="Inicio">Inicio</string>
    <string name="calculo_mensual">Cálculo Mensual</string>
    <string name="cantidad_personas">cantidad personas</string>
    <string name="porcentaje_dividir">porcentaje a dividir</string>
    <string name="gastos_totales">gastos totales\n</string>
    <string name="ingresos_totales">ingresos totales\n</string>
    <string name="total_por_persona">total por persona</string>
    <string name="calcular">calcular</string>
    <string name="limpiar">limpiar</string>
    <string name="generar_porcentajes">generar porcentajes</string>
    <string name="hint_sumar_100">Los porcentajes deben sumar 100</string>
</resources>